--- a/style.css
+++ b/style.css
@@ -108,6 +108,14 @@ text-align: center;
       font-family: 'Oswald', sans-serif;
   }
 
+  .footer {
+      text-align: center;
+      background-color: #ffd700;
+      color: #057bff;
+      font-family: 'Oswald', sans-serif;
+      font-size: 22px;
+  }
+
   @media only screen and (max-width: 600px) {
     .image {
         width: 100vw;
