--- a/style.css
+++ b/style.css
@@ -64,8 +64,12 @@ text-align: center;
     font-size: 18px;
     background-color: black;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
     color: white;
+}
+
+.text p {
+    margin: 0px;
 }
 
 .content {
@@ -114,6 +118,20 @@ text-align: center;
       color: #057bff;
       font-family: 'Oswald', sans-serif;
       font-size: 22px;
+  }
+
+  .link:hover {
+      background-color: #371594;
+  }
+
+  .link img {
+    vertical-align: middle;
+  }
+
+  .link a {
+    padding: 10px;
+    color: white;
+    text-decoration: underline;
   }
 
   @media only screen and (max-width: 600px) {
