--- a/style.css
+++ b/style.css
@@ -50,9 +50,17 @@ a {
     font-size: 20px;
 }
 
+.warning {
+    background-color: #fc2403;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    font-size: 18px;
+    padding: 20px;
+}
+
 .donate-element-1 {
     display: inline;
-text-align: center;
+    text-align: center;
 }
 .donate-element-2 {
     display: inline;
