--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ a {
     font-family: 'Oswald', sans-serif;
     font-size: 18px;
     padding: 20px;
+    text-align: center;
 }
 
 .donate-element-1 {
